Steps to reproduce: 1. New Writer; 2. "Tools - Macro - Orginize Dialogs“, create new under "Untitled 1", then "Edit". 3. Draw a "Text Box" or "Label Field", then hit DELETE key try to delete the control. Current Behaviour: Crash. OS: Win XP SP3 LireOffice 4.3.0.2
In fact, it seems to crash for every control.
Reproducible, tested using Linux Mint 17 x64 with LibreOffice Version: 4.4.0.0.alpha0+ Build ID: f511a2915ed856f048fd7dd91fd9f7537b1e0479
Also crashes using Version: 4.2.4.2 Build ID: 420m0(Build:2)
Note that there were intermediate problems in between good and bad commits - but I only focused on the issue of crashing immediately after pushing delete. Setting Priority: Major - crash/data loss but not going to affect a ton of people - very specific steps with a not often used feature. High - default seems appropriate 82bbae10fab56fbbd5e1fb3676257a21c3d51aa2 is the first bad commit commit 82bbae10fab56fbbd5e1fb3676257a21c3d51aa2 Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com> Date: Thu Oct 17 06:13:49 2013 +0000 source-hash-e8ad612bf813579f7a3bd4ed32c719ee01c6ce2e commit e8ad612bf813579f7a3bd4ed32c719ee01c6ce2e Author: Takeshi Abe <tabe@fixedpoint.jp> AuthorDate: Thu May 16 21:23:01 2013 +0900 Commit: Takeshi Abe <tabe@fixedpoint.jp> CommitDate: Sat May 18 21:45:11 2013 +0900 Keep the functions local Change-Id: I7d56a72b8c22ce5e4c664b5ccf45aa984b9df88b :100644 100644 07b629deb9e92d414df3e910ae3f4b9d364f22e1 9c6bc466664638f68c744dad7e177c8de07ec7cb M autogen.log :100644 100644 ac25789afef4ce7befbc15527cb81643542bce2d b4e21c8614416d179923704fadc7546503d04c36 M ccache.log :100644 100644 284b5fa2c56f22ee33e90f8ee8188abaeceb747d ad204c1fc5385369636b556a4d546a5fcead1ff3 M commitmsg :100644 100644 effb0bc775a4a6143ea4beecab7e70328e2c8a24 9abfa19dac9efef1adb77afd8519b39f04c3156d M dev-install.log :100644 100644 4f524b0fe622aa8bab900d44f048c5573edbb6a6 f8d16f39c524e43b309b48385e461114d3603d91 M make.log :040000 040000 b0335f78373b507355f39ff31de9d4bfe9a833a6 94b4146e3181c95352b9ed90c14f889cf114a85d M opt # bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e # good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932 git bisect start 'latest' 'oldest' # bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574 # good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15 git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327 # good: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e git bisect good 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02 # good: [8ad82bc1416a07501651e8d96fe268e47d3931d3] source-hash-13821254f88d2c5488fba9fe6393dcf4ae810db4 git bisect good 8ad82bc1416a07501651e8d96fe268e47d3931d3 # good: [d084d250b04446535ca1d7c29cf2062e6bd042b3] source-hash-688f72e3a2c3ef923389bbd21f6aea3afe1114db git bisect good d084d250b04446535ca1d7c29cf2062e6bd042b3 # bad: [c2069a369d738078124812312d51f21ea1ce2421] source-hash-f160e4935c474a5293b3d3c11b3d538efb4767a0 git bisect bad c2069a369d738078124812312d51f21ea1ce2421 # good: [e2a9149a7723f4e00eb3cafe466e204e5da19e9c] source-hash-2ede6c95e6481c92cc199e7d74fd36c841636304 git bisect good e2a9149a7723f4e00eb3cafe466e204e5da19e9c # good: [8901dd09508607642af790dafbbe2d9e9bb9b2a8] source-hash-be1833cbc497080af531a207f216a4f560c0b9e9 git bisect good 8901dd09508607642af790dafbbe2d9e9bb9b2a8 # bad: [c5c74730cbc91eb2e9d18540bdd35cb21a575ee9] source-hash-0c45b5548537cffddc3fbdd6b1c2b9a8a1bdbc4a git bisect bad c5c74730cbc91eb2e9d18540bdd35cb21a575ee9 # bad: [82bbae10fab56fbbd5e1fb3676257a21c3d51aa2] source-hash-e8ad612bf813579f7a3bd4ed32c719ee01c6ce2e git bisect bad 82bbae10fab56fbbd5e1fb3676257a21c3d51aa2 # first bad commit: [82bbae10fab56fbbd5e1fb3676257a21c3d51aa2] source-hash-e8ad612bf813579f7a3bd4ed32c719ee01c6ce2e
Created attachment 103197 [details] bt from master sources On pc Debian x86-64 with master sources updated yesterday, I could reproduce the crash. During the creation of the text field, I noticed this: warn:legacy.tools:6244:1:svl/source/items/itemset.cxx:115: don't create ItemSets with full range before FreezeIdRanges() warn:legacy.osl:6244:1:unotools/source/config/moduleoptions.cxx:585: unknown factory
Julien Nabet committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1840cf944b36b7ead5800a036870e38f4ddb049 Resolves fdo#80906: Delete any control on Dialog editing window crashes LO The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
For 4.3:https://gerrit.libreoffice.org/10448 For 4.2:https://gerrit.libreoffice.org/10449 Let's wait for the review before telling if it's fixed or not. Perhaps I've just hidden the root cause of the problem with this patch, I'm not sure. Just for information, if you do this: - create a brand new file - create a dialog and edit to add a textbox - save the file - open the file again - edit and delete the textbox => no crash even without the patch
Julien Nabet committed a patch related to this issue. It has been pushed to "libreoffice-4-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=e712c229f02e62641856ef5dddbf3c6a38dbf5af&h=libreoffice-4-3 Resolves fdo#80906: Delete any control on Dialog editing window crashes LO It will be available in LibreOffice 4.3.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Julien Nabet committed a patch related to this issue. It has been pushed to "libreoffice-4-2": http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f712e0376cf77386b788093e9d19cfd0ea29913&h=libreoffice-4-2 Resolves fdo#80906: Delete any control on Dialog editing window crashes LO It will be available in LibreOffice 4.2.7. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Thank to Caolan's review, let's put this one FIXED now.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]